--- a/Webcrapping-with-BeautifulSoup-Capstone/Notebook Skeleton Guide Capstone Beautiful Soup.ipynb
+++ b/Webcrapping-with-BeautifulSoup-Capstone/Notebook Skeleton Guide Capstone Beautiful Soup.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:23.275508Z",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:23.290648Z",
@@ -68,7 +68,7 @@
        "b'!DOCTYPE html>\\r\\n<!--[if lt IE 9]>\\r\\n<html class=\"no-js ie8 oldie\" lang=\"en\" xml:lang=\\'en\\'>\\r\\n<![endif]-->\\r\\n<!--[if gt IE 8]><!--><html class=\"no-js\" lang=\"en\" xml:lang=\\'en\\'><!--<![endif]-->\\r\\n<head>\\r\\n<title>USD to IDR exchange rate history</title>\\r\\n<meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\\r\\n<meta name=\"viewport\" content=\"width=device-width, initial-scale=1, maximum-scale=5\">\\r\\n<meta charset=\"utf-8\" /><meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />\\r\\n<base href=\"http'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:23.808122Z",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -121,8 +121,8 @@
      "output_type": "stream",
      "text": [
       "<!DOCTYPE html>\n",
-      "<!--[if lt IE 9]>\r\n",
-      "<html class=\"no-js ie8 oldie\" lang=\"en\" xml:lang='en'>\r\n",
+      "<!--[if lt IE 9]>\n",
+      "<html class=\"no-js ie8 oldie\" lang=\"en\" xml:lang='en'>\n",
       "<![endif]-->\n",
       "<!--[if gt IE 8]><!-->\n",
       "<html class=\"no-js\" lang=\"en\" xml:lang=\"en\">\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:23.878904Z",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        " <a class=\"n\" href=\"/exchange-rate-history/usd-idr-2023-05-08\">2023-5-8</a>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {
     "scrolled": false
    },
@@ -246,7 +246,7 @@
        "'2023-5-9'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {
     "scrolled": false
    },
@@ -273,7 +273,7 @@
        " <span class=\"nowrap\"><span class=\"currencySymbol\">Rp</span>14,776</span>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "'$1 ='"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "'Rp14,844'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "130"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "520"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,10 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -515,7 +513,7 @@
        " '2022-11-14']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,10 +531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -673,7 +669,7 @@
        " 'Rp15,554']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,10 +694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -838,7 +832,7 @@
        " ('2022-11-14', 'Rp15,554')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,10 +851,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -877,7 +869,7 @@
        " ('2022-11-25', 'Rp15,693')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:41.517372Z",
@@ -976,7 +968,7 @@
        "4  2022-11-18  Rp15,641"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-13T05:12:59.165559Z",
@@ -1015,7 +1007,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -1037,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1135,7 @@
        "[130 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {
     "scrolled": false
    },
@@ -1168,7 +1160,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1200,7 @@
        "<Axes: title={'center': 'US Dollar (USD) To Indonesian Rupiah (IDR) Exchange Rate History'}, xlabel='Date', ylabel='Rate (Rp)'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1250,7 +1242,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USDtoIDR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>130.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>15,240.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>315.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>14,674.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>14,957.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>15,208.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>15,556.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>15,789.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       USDtoIDR\n",
+       "count    130.00\n",
+       "mean  15,240.88\n",
+       "std      315.06\n",
+       "min   14,674.00\n",
+       "25%   14,957.75\n",
+       "50%   15,208.50\n",
+       "75%   15,556.25\n",
+       "max   15,789.00"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "scrolled": false
    },
@@ -1261,7 +1340,7 @@
        "Timestamp('2022-12-28 00:00:00')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,28 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "USDtoIDR    15789\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1302,55 +1360,13 @@
        "Timestamp('2023-04-28 00:00:00')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['USDtoIDR'].idxmin()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "USDtoIDR    14674\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "USDtoIDR   15,240.88\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.mean()"
    ]
   },
   {
